--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,41 +1,41 @@
-#donation_info{
+#footer{
     width: 100%;
+    background-color: #222222;
     padding-top: 10%;
     padding-bottom: 10%;
-    background-color: #F8F4F3;
+    color: white;
 }
-#donation_inner{
-    width: 90%;
+#footer_inner{
+    width: 80%;
     margin: auto;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
-.donation_title{
-    font-weight: bold;
-    font-size: 35px;
-    text-align: center;
-}
-#heart_wrapper{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 5%;
-}
-#heart_wrapper li{
-    width: 20%;
-    padding: 2%;
-    border: 1px solid #ccc;
-    border-radius: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+#footerBox1{
+    width: 58%;
     margin: 1%;
 }
-#heart_con img{
-    margin-right: 2%;
+#footerBox2{
+    width: 38%;
+    margin: 1%;
+}
+#footerBox1 img{
+    margin-bottom: 5%;
+}
+.footTxtColor{
+    color: #7C7C7C;
+}
+.lastbox{
+    width: 80%;
+    padding: 4%;
+    border-radius: 50px;
+    border: 1px solid white;
+    display: flex;
+    align-items: center;
+    color: white;
+    margin-top: 4%;
+}
+.lastbox img{
+    margin-left: auto;
 }
 
 
