--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,13 +1,56 @@
+#dropmenu{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 20000;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(5px);
+   
+}
+#exitIcon{
+    width: 50px;
+    height: 50px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    /* font-weight: 600; */
+    position: absolute;
+    color: black;
+    top: 5%;
+    right: 5%;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.nav-links_moblie {
+    width: 60%;
+    height: 100%;
+    background-color: #242424;
+    padding: 10%;
+  
+}
+.nav-links_moblie li{
+    width: 100%;
+    padding: 5%;
+    border-bottom: 1px solid white;
+
+}
+.nav-links_moblie li a{
+    color: white;
+}
 #header{
     width: 100%;
     /* background-color: #b8b8b8; */
-    padding-top: 1%;
-    padding-bottom: 1%;
+    padding-top: 2%;
+    padding-bottom: 2%;
     position: relative;
-    z-index: 10;
+    z-index: 20;
 }
 #nav{
-    width: 90%;
+    width: 80%;
     margin: auto;
     display: flex;
     align-items: center;
@@ -18,8 +61,11 @@
     align-items: center;
     color: black;
 }
+/* #logo img{
+    width: 10%;
+} */
 #navcon{
-    width: 40%;
+    width: 45%;
     margin-left: auto;
     /* background-color: bisque; */
     display: flex;
@@ -44,3 +90,45 @@
     background-color: black;
     color: white !important;
 }
+#hamburger{
+    width: 10%;
+    /* background-color: black; */
+    display: none;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+
+}
+#hamburger img{
+    width: 40%;
+}
+.fade-in {
+    animation: fadeIn 0.3s ease forwards;
+  }
+  
+  .fade-out {
+    animation: fadeOut 0.3s ease forwards;
+  }
+  
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(-10px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+  @keyframes fadeOut {
+    from {
+      opacity: 1;
+      transform: translateY(0);
+    }
+    to {
+      opacity: 0;
+      transform: translateY(-10px);
+    }
+  }
+  
