--- a/src/components/TeamSection.css
+++ b/src/components/TeamSection.css
@@ -7,3 +7,68 @@
     display: flex;
     justify-content: space-around;
 }
+
+
+/* Media Queries Section */
+@media screen and (max-width: 1280px) {
+ 
+}
+
+@media screen and (max-width: 1024px) {
+
+}
+
+@media screen and (max-width: 912px) {
+
+}
+@media screen and (max-width: 853px) {
+
+}
+
+@media screen and (max-width: 820px) {
+
+}
+
+@media screen and (max-width: 768px) {
+  
+}
+
+@media screen and (max-width: 540px) {
+
+}
+@media screen and (max-width: 430px) {
+
+
+}
+@media screen and (max-width: 414px) {
+
+}
+
+@media screen and (max-width: 412px) {
+      
+}
+
+@media screen and (max-width: 393px) {
+
+}
+
+@media screen and (max-width: 390px) {
+
+   
+}
+@media screen and (max-width: 375px) {
+  
+}
+
+
+@media screen and (max-width: 360px) {
+    
+}
+
+@media screen and (max-width: 320px) {
+   
+}
+
+@media screen and (max-width: 280px) {
+  
+}
